impelemnted breadcamps with css ::before

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </a>
             <nav id="navigation_containner">
                 <ul>
-                <li><a href="#">Video to rent </a></li>
+                <li><a href="#">Video to rent</a></li>
                 <li><a href="#">Video to buy</a></li>
                 <li><a href="#">Used DVDs</a></li>
                 <li><a href="#">Offers</a></li>
@@ -25,8 +25,8 @@
         </div>
         <nav id="bottom-header-area">
             <ul>
-             <li><a href="#">Home</a></li>/
-             <li><a href="#">Used DVDs</a></li>/
+             <li><a href="#">Home</a></li>
+             <li class="active"><a href="#">Used DVDs</a></li>
              <li><a href="#">Less than £10</a></li>
             </ul>
         </nav>
